feat(main): Replace sqlite by h2 and add unit tests
H2 was spring compatible and avoid NPE when SQLException was translated
into DataAccessException

Add unit test on mapper, add xml sample files to test StAX parser
Add DateUtils to manager LocalDate vs Instant conversion